Fixed visibility issue and added scroll animations

--- a/style.css
+++ b/style.css
@@ -76,9 +76,10 @@ body {
     top: 0;
     width: 100%;
     border-radius: 0;
-    left: 0;
-    transform: translateX(0);
-    justify-content: space-around;
+    left: 50;
+    transform: translateX(-50);
+    justify-content: center; 
+    gap: 50px;
 }
 
 .menu-toggle {
